--- a/styless.css
+++ b/styless.css
@@ -41,10 +41,16 @@ body {
   transform-origin: 0 100%;
 }
 
-.heart:after {
-  left: 0;
+  .heart:after {
+    left: 0;
   
   transform-origin: 100% 100%;
-  transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+#car-container {
+  width: 600px;
+  height: 400px;
+  margin: 20px auto;
 }
 
